This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/23/21: Added camera property to set delay from setting intensity to starting
acquisition.

2/22/21: Added options to use Search area to Autofocus script command.

2/22/21: SEM_3-8-7
2/22/21: Added button to Hole Finder to toggle display of points while button
is pressed.

2/22/21: Added ability to open script editor windows with a right click on the
button in the script toolbar or Camera and Script Tools panel.

2/22/21: Replaced colored borders for buttons with colored backgrounds.

2/22/21: Fixed using OneView with drift correction and float images (In 3.8).

2/18/21: Assigned the current stage backlash, if any, to an image shift
montage so that a map made from it would have backlash (In 3.8).

2/16/21: Added script command to report the number of holes and Navigator
points that would be acquired by MultipleRecords using only points that 
include a specified minimum number of holes.  ReportNavItem also sets a
variable for the number of holes that would be acquired for one item.

2/16/21: Made excluded points in the hole finder be colored light or dark blue
depending on which mean cutoff they exceeded.

2/11/21: SEM_3-9-0beta4
2/11/21: Updated Microsoft DLL's on nightly build machine and discarded beta2
and beta3 packages built there because plugins would not load on Windows 10.

2/9/21: Added script commands to change frame and exposure times together by a
factor, and to adjust dose outputs in the .mdoc file.

2/7/21: Fixed saving of non-square images, broken 1/30.

2/6/21: Added script command to do File - Open Old, made some commands able to
work on a buffer in the FFT window, and added command to test if that is open.
