@@ -1097,8 +1097,8 @@
           <TD class="scriptcommand">ReplaceFrameTSShifts varX varY</TD>
           <TD>Changes the entire array of image shift values to be imposed in a frame tilt 
             series with a new set of values (i.e., refined predictions) in the two array 
-            variables given by <b>varX</b> and <b>varY</b>.&nbsp; Even though the original shifts
-            were provided in 'specimen' coordinates, these shifts must all be image shift values.&nbsp; Both 
+            variables given by <b>varX</b> and <b>varY</b>.&nbsp; As of SerialEM 3.8.8, these shifts 
+            should be in 'specimen' coordinates just like the original shifts.&nbsp; Both 
             arrays must have the same size as the original number of tilt angles.&nbsp; 
             Untested</TD>
         </TR>
