@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+3/2/22: Changed shifts for ReplaceFrameTSShifts to be in specimen coordinates
+(In 3.8).
+
 2/23/21: Added camera property to set delay from setting intensity to starting
 acquisition.
 
